decouple filescanner dependencies from methods